<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main2">La Justa</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main3">MainActivity</string>
    <string name="title_activity_toolbar">ToolbarActivity</string>

    <string name="Login">Ingresar/Registrarse</string>
    <string name="Logout">Cerrar Sesión</string>
    <string name="Perfil">Perfil</string>
    <string name="Noticias">Noticias</string>
    <string name="Inicio">Inicio</string>
    <string name="Productores">Productores</string>
    <string name="SobreNosotros">Sobre Nosotros</string>
    <string name="cartsimbol">CartSimbol</string>
    <string name="carthistory">Historial de Pedidos</string>
    <string name="map">Mapa</string>
</resources>