<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/inicioid"
        android:onClick="changeFragmentToCategory"
        android:title="@string/Inicio" />
    <item
        android:id="@+id/loginid"
        android:onClick="changeFragmentToLogin"
        android:title="@string/Login" />
    <item
        android:id="@+id/perfilid"
        android:onClick="changeFragmentToProfile"
        android:title="@string/Perfil" />
    <item
        android:id="@+id/noticiasid"
        android:onClick="changeFragmentToReports"
        android:title="@string/Noticias" />
    <item
        android:id="@+id/productoresid"
        android:onClick="changeFragmentToProducers"
        android:title="@string/Productores" />
    <item
        android:id="@+id/nosotrosid"
        android:onClick="changeFragmentToAboutUs"
        android:title="@string/SobreNosotros" />
    <item
        android:id="@+id/logoutid"
        android:onClick="logout"
        android:title="@string/Logout" />

    <item
        android:id="@+id/action_cart"
        style="@android:style/Widget.ActionButton"
        android:icon="@drawable/whitecart_foreground"
        android:onClick="changeFragmentToCart"
        android:orderInCategory="1000"
        android:title="@string/cartsimbol"
        app:showAsAction="ifRoom" />
</menu>